# LogIngestorServer

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
scripts/: README.md  concurrent_stress_test.py  empty.py  generate_and_upload.py  requirements.txt  sample.clp.zstd  stress_upload.py
src/: main.rs
src/buffering/: buffer.rs  listener.rs  listener_key.rs  mod.rs
src/compression/: compress.rs  config.rs  mod.rs
src/database/: mysql.rs
src/scanner/: job.rs  job_params.rs  mod.rs  scanned_object.rs  utils.rs
src/service/: manager.rs  mod.rs  scanner.rs  service.rs
src/sqs_listener/: job.rs  job_params.rs  mod.rs
src/utils/: mod.rs  s3_object.rs  sqs_client.rs  sqs_s3_message.rs
