[package]
name = "LogIngestor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
actix-web = "4.11.0"
actix-web-httpauth = "0.8"
aws-sdk-s3 = { version = "1.74.0", features = ["behavior-version-latest"] }
brotli = "8.0.2"
dashmap = "5.4.0"
flexi_logger = "0.29"
hex = "0.4"
log = "0.4"
rmp-serde = "1.3.0"
serde = "1.0.217"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5.48", features = ["derive"] }
